k8/gatekeeper/test_alpline_.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-alpine
spec:
  containers:
    - name: alpine-test
      image: alpine:latest
      command: ["echo", "Hello, world!"]
