k8/gatekeeper/constraint_.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImages
metadata:
  name: allowed-images
spec:
  enforcementAction: deny
